# MasterMods-Python-Flask

./: README.md  main.py  pyproject.toml
app/: __init__.py  config.py  models.py
app/cars/: __init__.py  cars.py
app/cars/templates/: cars.html
app/home/: home.py
app/home/templates/: home.html
app/static/: style.css
app/templates/: layout.html
instance/: project.db
