[tool.poetry]
name = "mastermods"
version = "0.1.0"
description = "car modification lover hup"
authors = ["EslamRedaMohamed <eslamreda.info@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
flask-sqlalchemy = "^3.1.1"
flask-migrate = "^4.0.7"
psycopg2 = "^2.9.9"
flask-shell = "^0.1.8"
flask-shell-ipython = "^0.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
